# fastapi-example

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  fabfile.py  main.py  mkdocs.yml  pyproject.toml  readme.md  rtapi.yaml  test.py  tox.ini
alembic/: env.py
alembic/versions/: 146dd8cdacfa_test_migration.py  eea1fb837486_initial_migrations.py
app/: config.py  main.py
app/alembic/: env.py
app/alembic/versions/: 1c73cec17775_create_drivers.py  585e6d25dba8_init.py  66fe5ab82f9c_initial_migrations.py  e9045f34bf08_create_notes.py
app/db/: async-example.py  base.py  db.py  items.py  models.py
app/drivers/: models.py  views.py
app/models/: .drivers.py.swp  cars.py  drivers.py  items.py  trips.py  users.py
app/notebooks/: models.py  service.py  views.py
app/notes/: models.py  service.py  views.py
app/routers/: cars.py  drivers.py  emails.py  items.py  trips.py
app/schemas/: cars.py  drivers.py  items.py  trips.py
docs/: api.md  conf.py  index.md  index.rst
requirements/: development.txt  production.txt
src/: config.py
src/alembic/versions/: 6699549f7ca3_initial.py  e6206c32187e_initial.py
src/app/: main.py
src/db/: models.py
src/requirements/: production.txt
todo/: .tasks.done  tasks
