[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["omussell <oliver.mussell@hotmail.co.uk>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.18.2"
orm = "^0.1.5"
databases = "^0.4.3"
alembic = "^1.6.5"
celery = "^5.1.2"
fastapi = "^0.65.2"

[tool.poetry.dev-dependencies]
isort = "^5.9.1"
flake8 = "^3.9.2"
flake8-blind-except = "^0.2.0"
flake8-bugbear = "^21.4.3"
flake8-coding = "^1.3.2"
flake8-commas = "^2.0.0"
flake8-debugger = "^4.0.0"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.0.0"
flake8-quotes = "^3.2.0"
flake8-sfs = "^0.0.3"
lizard = "^1.17.7"
radon = "^5.0.1"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
